fix: improve icon visibility and thumbnail layout; refs #27687

--- a/src/main/webapp/uii/template/css/src/components/_icon.scss
+++ b/src/main/webapp/uii/template/css/src/components/_icon.scss
@@ -52,7 +52,7 @@
 
 /* Color Modifiers */
 .icon-wrapper.icon--light { color: #bbb; }
-.icon-wrapper.icon--muted { color: var(--clr-neutral-400); }
+.icon-wrapper.icon--muted { color: var(--clr-neutral-600); }
 .icon-wrapper.icon--primary { color: var(--clr-primary-400); }
 .icon-wrapper.icon--success { color: #339933; }
 .icon-wrapper.icon--warning { color: #e8860c; }
